n8n/04-deploy-n8n.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n-n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n-n8n
  template:
    metadata:
      labels:
        service: n8n-n8n
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: n8nio/n8n
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-data
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: pvc-n8n-data
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n-n8n
spec:
  type: ClusterIP
  ports:
    - name: n8n
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n-n8n
