n8n/05-ingress-n8n.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-n8n
  namespace: n8n
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    # Uncomment next if you use https://cert-manager.io/
    # cert-manager.io/cluster-issuer: "<YOUR CLUSTER ISSUER>"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - n8n.example.com
  rules:
    - host: n8n.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
